--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "python.autoComplete.extraPaths": [
-    "/home/leo/catkin_ws/devel/lib/python3/dist-packages",
+    "~/catkin_ws/devel/lib/python3/dist-packages",
     "/opt/ros/noetic/lib/python3/dist-packages"
   ],
   "files.associations": {
@@ -77,7 +77,7 @@
     "bit": "cpp"
   },
   "python.analysis.extraPaths": [
-    "/home/leo/catkin_ws/devel/lib/python3/dist-packages",
+    "~/catkin_ws/devel/lib/python3/dist-packages",
     "/opt/ros/noetic/lib/python3/dist-packages"
   ]
 }
